--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 CHANNEL= # channel id from slack api
 TOKEN= # slack api. Token can be obtained at https://api.slack.com/web#authentication
-USER= # user id from slack api
+PHIL= # user id from slack api for the "Phil" you want to kick
